--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,18 @@
+body{
+  background-color: azure;
+}
+
 h1{
   text-align: center;
+  color: blue;
+}
+
+a{
+  text-decoration: none;
+  color: green;
+}
+
+p{
+  text-indent: 10px;
+  margin-left: 20px;
 }
