--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,11 @@ h1{
   color: blue;
 }
 
+h2{
+  text-align: center;
+  font-size: 16px;
+}
+
 a{
   text-decoration: none;
   color: green;
@@ -15,4 +20,32 @@ a{
 p{
   text-indent: 10px;
   margin-left: 20px;
+}
+
+.block-head{
+  text-align: right;
+}
+
+hr{
+  height: 3px;
+  background-color: blue;
+}
+
+img{
+  width: 155px;
+  height: 250px;
+  float: left;
+  margin: 0 10px 10px 0;
+}
+
+ul{
+  list-style-type: none;
+}
+
+.bold{
+  font-weight: bold;
+}
+
+.italic{
+  font-style: italic;
 }
